--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "TpBank",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,19 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.17.2",
-    "connect-flash": "^0.1.1",
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.15.0",
     "connect-mongo": "^2.0.0",
-    "express": "^4.15.4",
-    "express-messages": "^1.0.1",
-    "express-session": "^1.15.6",
-    "express-validator": "^3.2.1",
-    "mongoose": "^4.11.7",
-    "nodemailer": "^4.2.0",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
+    "express": "^4.13.4",
+    "express-jwt": "^5.3.0",
+    "jsonwebtoken": "^5.7.0",
+    "mongoose": "^4.4.1",
+    "morgan": "^1.6.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "pug": "^2.0.0-rc.3",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.4"
   }
 }
